Fixed index.html positioning bugs
- Elements weren't aligned so I updated the CSS

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,8 +79,8 @@ h6 {
 .hero {
   background-color: var(--hero-background);
   text-align: center;
-  padding: 100px 40px;
-  height: 750px;
+  padding: 10px 40px;
+  height: 700px;
 }
 
 .hero a {
@@ -113,11 +113,17 @@ h6 {
 }
 
 .sections .word-section {
-  padding: 40px 40px;
+  padding: 30px 40px;
 }
 
+.weather-section {
+  padding: 20px 40px !important;
+  
+}
+
+
 .word-section p {
-  line-height: 1.5;
+  line-height: 1.7;
   font-size: 16px;
 }
 
